hphp/test/slow/hhbbc/missing-classes2.php.expectf
Fatal error: Class Bad1 may not inherit from final class (T) in %s/missing-classes2.php on line 16

